--- a/Microphone.html
+++ b/Microphone.html
@@ -15,12 +15,11 @@
             <li><a href="GPUvendors.html">Graphic Card Vendors</a></li>
             <li><a href="VRAM.html">GPU VRAM</a></li>
             <li><a href="CPUcores.html">CPU core count</a></li>
-            <li><a href="Microphone.html">Microphone</a></li>
+            <li class="active"><a href="Microphone.html">Microphone</a></li>
             <li><a href="Language.html">Language</a></li>
             <li><a href="SystemRAM.html">System RAM</a></li>
             <li><a href="TotalHardDrive.html">Total HDD Space</a></li>
             <li><a href="EmptyHardDrive.html">Free HDD Space</a></li>
-            <li><a href="OperatingSystems.html">OS Versions</a></li>
        </ul>
     </nav>   
 </header>
