--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <nav>
        <ul>
-            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="GPUvendors.html">Graphic Card Vendors</a></li>
             <li><a href="VRAM.html">GPU VRAM</a></li>
             <li><a href="CPUcores.html">CPU core count</a></li>
@@ -20,15 +20,17 @@
             <li><a href="SystemRAM.html">System RAM</a></li>
             <li><a href="TotalHardDrive.html">Total HDD Space</a></li>
             <li><a href="EmptyHardDrive.html">Free HDD Space</a></li>
-            <li><a href="OperatingSystems.html">OS Versions</a></li>
        </ul>
     </nav>   
 </header>
+<br></br>
 <h1>
     Welcome to Visualisation of data of Steam platform
 </h1>
+<br></br>
+<br></br>
 <h2>
-    Click on the category to view historical data.
+    To select historical data you wish to see, please select category above.
 </h2>
 
 <body>
